--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="theme-color" content="#000000" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+    
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/animate.css">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/icomoon.css">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css">
+    <!-- Flexslider  -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/flexslider.css">
+    <!-- Flaticons  -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/flaticon/font/flaticon.css">
+    <!-- Owl Carousel -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.theme.default.min.css">
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
+
+    <!-- Modernizr JS -->
+    <script src="%PUBLIC_URL%/js/modernizr-2.6.2.min.js"></script>
+    <title>Yuchen's page!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
